{
  "buttonNext": "Next",
  "buttonCancel": "Cancel",
  "buttonSave": "Save",
  "buttonSend": "Send",
  "buttonApply": "Apply",
  "buttonSet": "Set",

  "labelEmail": "Email",
  "labelPassword": "Password",
...
  "actionResetPassword": "Reset password",
  "actionSendEmail": "Send e-mail",
  "actionSendVerificationAgain": "Send e-mail again?",
  "actionDeleteAccount": "Delete account",
  "actionAddWebsite": "Add website",
  "actionEditWebsite": "Edit website",
  "actionDeleteWebsite": "Delete website",
  "actionEnableEditing": "Enable editing",
  "actionDisableEditing": "Disable editing",
  "actionJumpToToday": "Jump to today",
  "actionAddEvent": "Add event",
  "actionEditEvent": "Edit event",
  "actionDeleteEvent": "Delete event",
...
  "navigationFilter": "Filter",
  "navigationClasses": "Classes",
  "navigationEventDetails": "Event details",

  "filterMenuShowAll": "Show all",
  "filterMenuShowMine": "Show only mine",
  "filterMenuRelevance": "Filter by relevance",

  "relevanceOnlyMe": "Only me",
  "relevanceAnyone": "Anyone",

  "settingsTitlePersonalization": "Personalization",
  "settingsItemDarkMode": "Dark Mode",
...
  "messageCannotBeUndone": "This action cannot be undone.",
  "messageUnderConstruction": "Under construction",
  "messageWebsitePreview": "Try tapping/long-pressing/hovering the preview to test the new website.",
  "messageAddCustomWebsite": "Try adding a custom website.",
  "messageWebsiteAdded": "Website added successfully.",
  "messageWebsiteEdited": "Website modified successfully.",
  "messageDeleteWebsite": "Are you sure you want to delete this website?",
  "messageWebsiteDeleted": "Website deleted successfully.",
  "messageDeleteEvent": "Are you sure you want to delete this event?",
  "messageDeleteShortcut": "Are you sure you want to delete \"{shortcutName}\"?",
  "messageThisCouldAffectOtherStudents": "This could affect other students.",
  "messageShortcutDeleted": "Shortcut deleted successfully.",
  "messageNoClassesYet": "You have not added any classes yet.",
...
