...
                ],
              ),
              if (isMainUser(context))
                ListTile(
                  leading: CircleAvatar(
                    backgroundColor:
                        ClassHeader(acronym: 'PC').colorFromAcronym,
                    child: Icon(Icons.laptop,
                        color: ClassHeader(acronym: 'PC')
                            .colorFromAcronym
                            .highEmphasisOnColor),
                  ),
                  title: Text('PC - Tema 1'),
...
